--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
+# required properties
 group = com.almostreliable
 modId = merequester
 modName = ME Requester
@@ -5,20 +6,19 @@ modVersion = 1.1.7
 minecraftVersion = 1.21.1
 neoforgeVersion = 21.1.36
 
+# replacement properties
 modAuthor = Almost Reliable
 modDescription = Keep resources in your ME-System in stock.
 license = GNU Lesser General Public License v3.0
 githubUser = AlmostReliable
 githubRepo = merequester
 
-# Project Dependencies
-neoForge.parchment.minecraftVersion = 1.21
-neoForge.parchment.mappingsVersion = 2024.07.28
-
-# Mod Dependencies
+# mod dependencies
 aeVersion = 19.0.20-beta
 
-# Settings
+# settings
+neoForge.parchment.minecraftVersion = 1.21
+neoForge.parchment.mappingsVersion = 2024.07.28
 almostgradle.buildconfig.name = ModConstants
 almostgradle.launchArgs.autoWorldJoin = true
 almostgradle.recipeViewers.emi.runConfig = true
